
= milk_cap CHANGELOG.txt

== milk_cap - tbd       not yet released

- converted from test/unit to rspec, removed test files from gem distribution
- removed forced 1 second sleep in RTM API calls
- removed new timeline creation for each #add! call, no reuses single timeline
- supports setting task tags


== milk_cap - 0.5.1     released 2014/01/03

- removed rufus-verbs dependency (and rufus-lru)


== milk_cap - 0.5.0     released 2014/01/02

- rufus-rtm is now milk_cap: updated docs, contacts, gemspec, etc
- module Rufus is now MilkCap
- no functional changes


== rufus-rtm - 0.1.3    released 2010/01/24

- removed ugly World.include(Rufus::Verbs) (shame on me)
- ruby 1.9.x friendly
- removed evil "require 'rubygems'" from rufus/rtm/base.rb
- can now pass rtm key and secret via method params (Giorgio's request)


== rufus-rtm - 0.1    released 2008/02/14

- initial release